BRA-30: Build the rulebook's Expansion Components chapter

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -1375,6 +1375,141 @@
           </article>
         </article>
       </section>
+
+
+      <section id="expansion_components" class="chapter">
+        <figure class="h1">
+          <img src="images/rulebook/expansion_components/expansion-components-heading.png" alt="Components">
+        </figure>
+        <article class="inner_content">
+          <p class="u-trajan_font">Hunt Expansion:</p>
+          <ul class="icons_list">
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion_components/ce-alternative-volcano.png" alt="Volcano">
+              <p>
+                <b>4 alternative cardboard cutout rings</b>
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion_components/ce-alternative-map.png" alt="Alternative Map">
+              <p>
+                <b>1 alternative Map of Fenian</b><br>
+                (northern map)
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion_components/ce-magma-tokens.png" alt="Magma tokens">
+              <p>
+                <b>8 Magma tokens</b>
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion_components/ce-hunts.png" alt="Hunt markers">
+              <p>
+                <b>4 Hunt markers</b><br>
+                <span class="u-blue_text"><i>Tokens in place of miniatures </i>(Only for Wooden edition)</span>
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion_components/ce-skullcrashers.png" alt="Skullcrashers miniatures">
+              <p>
+                <b>4 Skullcrusher miniatures</b><br>
+                <span class="u-blue_text"><i>Meeples in place of miniatures </i>(Only for Wooden edition)</span>
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion_components/ce-monster-cards.png" alt="Monster cards">
+              <p>
+                <b>6 Monster cards</b><br>
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion_components/ce-beast-cards.png" alt="Beast cards">
+              <p>
+                <b>6 Beast cards</b>
+              </p>
+            </li>
+          </ul>
+        </article>
+        <article class="inner_subcontent">
+          <p class="u-trajan_font">Personal Objectives:</p>
+          <ul class="icons_list">
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion_components/ce-personal-obj.png" alt="Personal Objectives">
+              <p>
+                <b>5 Personal objective cards</b>
+              </p>
+            </li>
+          </ul>
+        </article>
+        <article class="inner_subcontent">
+          <p class="u-trajan_font">Special Buildings:</p>
+          <ul class="icons_list">
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion_components/ce-add-building-cards.png" alt="Additional Building cards">
+              <p>
+                <b>4 additional Building cards</b>
+              </p>
+            </li>
+          </ul>
+        </article>
+        <article class="inner_subcontent">
+          <p class="u-trajan_font">Havoc Maker Tokens:</p>
+          <ul class="icons_list">
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion_components/ce-milestone-tokens.png" alt="Milestone tokens">
+              <p>
+                <b>6 Milestone tokens</b>
+              </p>
+            </li>
+          </ul>
+        </article>
+        <article class="inner_subcontent">
+          <p class="u-trajan_font">Additional Demons and Feasts:</p>
+          <ul class="icons_list">
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion_components/ce-add-demons-cards.png" alt="Additional Demon cards">
+              <p>
+                <b>2 additional Demon cards</b>
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion_components/ce-add-feast-cards.png" alt="Additional Feasts cards">
+              <p>
+                <b>4 additional Feast cards</b>
+              </p>
+            </li>
+          </ul>
+        </article>
+        <article class="inner_subcontent">
+          <p class="u-trajan_font">Kickstarter Exclusive Map:</p>
+          <ul class="icons_list">
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion_components/ce-ks-map.png" alt="Alternative map">
+              <p>
+                <b>1 alternative map of Fenian</b>
+              </p>
+            </li>
+          </ul>
+        </article>
+        <article class="inner_subcontent">
+          <p class="u-trajan_font">One-Player Mode:</p>
+          <ul class="icons_list">
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion_components/ce-oneplayer-rulebook.png" alt="One-player rules">
+              <p>
+                <b>One-player rules</b>
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion_components/ce-fate-cards.png" alt="Fate cards">
+              <p>
+                <b>6 Fate cards</b>
+              </p>
+            </li>
+          </ul>
+        </article>
+      </section>
     </div>
 
     <div class="rulebook_reference">
