BRA-42: Add styles for tablet devices

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -13,7 +13,7 @@
     <div class="fixed_background"></div>
     <div class="rulebook">
       <section id="introduction" class="chapter">
-        <figure class="h1">
+        <figure class="h1 u-flex_center">
           <img src="images/rulebook/introduction/introduction-heading.png" alt="Introduction">
         </figure>
         <article class="inner_content">
@@ -41,7 +41,7 @@
 
 
       <section id="game_flow" class="chapter">
-        <figure class="h1">
+        <figure class="h1 u-flex_center">
           <img src="images/rulebook/game_flow/gameflow-heading.png" alt="Game Flow">
         </figure>
         <article class="inner_content">
@@ -578,7 +578,7 @@
       </section>
 
       <section id="game_end" class="chapter">
-        <figure class="h1">
+        <figure class="h1 u-flex_center">
           <img src="images/rulebook/game_end/gameend-heading.png" alt="Game end">
         </figure>
         <article class="inner_content">
@@ -684,7 +684,7 @@
 
 
       <section id="variant" class="chapter">
-        <figure class="h1">
+        <figure class="h1 u-flex_center">
           <img src="images/rulebook/variant/variant-heading.png" alt="Variant: Clan Power">
         </figure>
         <article class="inner_content">
@@ -740,7 +740,7 @@
       </section>
 
       <section id="components" class="chapter">
-        <figure class="h1">
+        <figure class="h1 u-flex_center">
           <img src="images/rulebook/components/components-heading.png" alt="Components">
         </figure>
         <article class="inner_content">
@@ -896,7 +896,7 @@
 
     <div class="rulebook_expansion">
       <section id="hunt_expansion" class="chapter">
-        <figure class="h1">
+        <figure class="h1 u-flex_center">
           <img src="images/rulebook/expansion/expansion-heading.png" alt="Expansion rules">
         </figure>
         <article class="inner_content">
@@ -907,7 +907,7 @@
       </section>
 
       <section id="hunt_expansion" class="chapter">
-        <figure class="h1">
+        <figure class="h1 u-flex_center">
           <img src="images/rulebook/expansion/hunt-heading.png" alt="Hunt Expansion">
         </figure>
         <article id="hunt_introduction" class="inner_content">
@@ -1093,7 +1093,7 @@
       </section>
 
       <section id="additional_modules" class="chapter">
-        <figure class="h1">
+        <figure class="h1 u-flex_center">
           <img src="images/rulebook/expansion/additional-heading.png" alt="Additional Modules">
         </figure>
         <article class="inner_content">
@@ -1234,7 +1234,7 @@
       </section>
 
       <section id="one_player_rules" class="chapter">
-        <figure class="h1">
+        <figure class="h1 u-flex_center">
           <img src="images/rulebook/expansion/oneplayer-heading.png" alt="One-Player Rules">
         </figure>
 
@@ -1379,7 +1379,7 @@
 
 
       <section id="expansion_components" class="chapter">
-        <figure class="h1">
+        <figure class="h1 u-flex_center">
           <img src="images/rulebook/expansion_components/expansion-components-heading.png" alt="Components">
         </figure>
         <article class="inner_content">
@@ -1515,7 +1515,7 @@
 
     <div class="rulebook_reference">
       <section id="reference" class="chapter">
-        <figure class="h1">
+        <figure class="h1 u-flex_center">
           <img src="images/rulebook/reference/reference-heading.png" alt="Reference">
         </figure>
         <article class="inner_content">
