Fixed-BRA-41: Use a background in a fixed positioned div to get around the fixed background issue on mobile

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -10,6 +10,7 @@
   <body>
   <div id="warning"></div>
   <div id="container" class="container">
+    <div class="fixed_background"></div>
     <div class="rulebook">
       <section id="introduction" class="chapter">
         <figure class="h1">
