BRA-43: Minor UI improvements

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -1763,8 +1763,8 @@
           </article>
         </article>
         <article class="inner_content">
-          <figure class="u-margin_auto u-half_width">
-            <img src="images/rulebook/credits/end.png" alt="End">
+          <figure>
+            <img src="images/rulebook/credits/divider.png" alt="Divider">
           </figure>
         </article>
       </section>
