Fixed BRA-9: added rulebook index page

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -1159,7 +1159,7 @@
           </p>
         </article>
 
-        <article id="personal_objectives" class="inner_content">
+        <article id="special_buildings" class="inner_content">
           <h2>Special Buildings</h2>
           <p>
             Before step 4 of the Setup, add these Building cards to the Buildings deck.
@@ -1223,7 +1223,7 @@
           </ul>
         </article>
 
-        <article id="havoc_maker_tokens" class="inner_content">
+        <article id="kickstarter_map" class="inner_content">
           <h2>Kickstarter Exclusive Map</h2>
           <p>
             Use this map in place of the Fenian map of the base game.<br>
@@ -1342,7 +1342,7 @@
           </article>
         </article>
 
-        <article id="one_player_setup" class="inner_content">
+        <article id="one_player_game_end" class="inner_content">
           <h2>Game End</h2>
           <article id="one_player_final_scoring" class="inner_subcontent">
             <h4>Final Scoring</h4>
