Add the cards list into the rulebook

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -1681,6 +1681,70 @@
       </section>
     </div>
 
+    <div class="rulebook_cards">
+      <section id="cards_reference">
+        <div class="u-flex_center">
+          <h2>CARDS REFERENCE</h2>
+        </div>
+        <figure>
+          <img src="images/rulebook/credits/divider.png" alt="Divider">
+        </figure>
+        <article class="inner_content">
+          <h2>Warchiefs & Warmaidens</h2>
+          <ul class="cards_list">
+            <li>W01 - Warmaiden Akili</li>
+            <li>W02 - Warchief Hamar</li>
+            <li>W03 - Warmaiden Ataahua</li>
+            <li>W04 - Warchief Kormas</li>
+            <li>W05 - Warchief Klo</li>
+            <li>W06 - Warchief Torc</li>
+            <li>W07 - Warmaiden Haona-Nui</li>
+            <li>W08 - Warmaiden Heulen-Wut</li>
+            <li>W09 - Warchief Blekkt</li>
+            <li>W10 - Warmaiden Gudhrun</li>
+            <li>W11 - Warchief Luathan</li>
+            <li>W12 - Warchief Etzel</li>
+            <li>W13 - Warchief Arswaed</li>
+            <li>W14 - Warmaiden Shetaka</li>
+            <li>W15 - Warmaiden Haxa</li>
+            <li>W16 - Warmaiden Sangavidaj</li>
+          </ul>
+        </article>
+        <article class="inner_content">
+          <h2>Gods</h2>
+          <ul class="cards_list">
+            <li>G01 - Quord</li>
+            <li>G02 - Kraul</li>
+            <li>G03 - Numbur</li>
+            <li>G04 - Jirsis</li>
+            <li>G05 - Inell</li>
+            <li>G06 - Ilderus</li>
+            <li>G07 - Leera</li>
+            <li>G08 - Tremran</li>
+            <li>G09 - Varc</li>
+            <li>G10 - Lissin</li>
+            <li>G11 - Himmen</li>
+            <li>G12 - Patrogan</li>
+            <li>G13 - Tharo</li>
+            <li>G14 - Glircath</li>
+            <li>G15 - Nodiel</li>
+            <li>G16 - Fandeg</li>
+          </ul>
+        </article>
+        <article class="inner_content">
+          <h2>Demons</h2>
+          <ul class="cards_list">
+            <li>D01 - Crom</li>
+            <li>D02 - Wargu</li>
+            <li>D03 - Skeleton Queen</li>
+            <li>D04 - Fhafnir</li>
+            <li>DE05 - Aracnus</li>
+            <li>DE06 - Dungorn</li>
+          </ul>
+        </article>
+      </section>
+    </div>
+
     <div class="rulebook_credits">
       <section id="credits" class="chapter">
         <div class="u-flex_center">
